--- a/index.html
+++ b/index.html
@@ -7,16 +7,14 @@
     <link rel="stylesheet" href="all.css">
 </head>
 <body>
-    <h1>使用TensorFlow預訓練模型進行物件偵測</h1>
-
-    <p>Wait for the model to load before clicking the button to enable the webcam - at which point it will become visible to use.</p>
+    <h1>使用TensorFlow預訓練模型進行物件偵測</h1>    
     
     <section id="demos" class="invisible">
 
-      <p>Hold some objects up close to your webcam to get a real-time classification! When ready click "enable webcam" below and accept access to the webcam when the browser asks (check the top left of your window)</p>
+      <p>1.請準備想偵測辨識的物品，並將物品對準鏡頭。<br>2.準備好就可以按下「開啟鏡頭」。<br>3.請同意允許使用鏡頭。</p>
       
       <div id="liveView" class="camView">
-        <button id="webcamButton">Enable Webcam</button>
+        <button id="webcamButton">開啟鏡頭</button>
         <video id="webcam" autoplay muted width="640" height="480"></video>
       </div>
     </section>
